--- a/design2/css/style.css
+++ b/design2/css/style.css
@@ -25,6 +25,18 @@ a:hover{
 #intro{
   width:100%;
 }
+
+.bgimages2{
+  background: url(../images/bglearning.jpg) no-repeat 0px 0px;
+/*background-size: contain;*/
+background-size: cover;
+/*background-size:cover;*/
+-webkit-background-size: cover;
+-o-background-size: cover;
+-ms-background-size: cover;
+-moz-background-size: cover;
+/*min-height: 790px;*/
+}
 input[type="button"],input[type="submit"]{
 	transition:0.5s all;
 	-webkit-transition:0.5s all;
@@ -62,6 +74,17 @@ background-size: cover;
 -o-background-size: cover;
 -ms-background-size: cover;
 -moz-background-size: cover;
+min-height: 790px;
+}
+.bglearning{
+background: url(../images/teacherstud.jpg) no-repeat 0px 0px;
+/*background-size: contain;*/
+background-size: 100% 100%;
+/*background-size:cover;*/
+-webkit-background-size: 100% 100%;
+-o-background-size: 100% 100%;
+-ms-background-size: 100% 100%;
+-moz-background-size: 100% 100%;
 min-height: 790px;
 }
 .ban2{
@@ -727,14 +750,33 @@ a.callbacks_nav.callbacks3_nav.next{
 }
 .about-agileits p {
     font-size: 20px;
-    color: #f8b239;
+    /*color: #f8b239;*/
     line-height: 40px;
     letter-spacing: 1px;
     font-weight: 600;
     font-family: Century,serif;
 }
+/*.about-agileits > p > .passionq{float:right;}*/
+/*p .passionq{text-align: right;}*/
+.passionq{
+  /*width:100%;*/
+  /*margin`-top:20px;*/
+  text-align: right;
+  color:#9f1c41;
+  /*font-size:100px;*/
+  /*font-size:50px;*/
+}
+.about-agileits .passionq p{
+  margin-top:40px;
+  font-size:35px;
+  font-family: cursive;
+  font-style:italic;
+}
+.about-agileits i{
+  font-weight:800;
+}
 .about-agileits p:nth-child(1){
-    margin-bottom:30px;
+    /*margin-bottom:30px;*/
 }
 .about-agileits h3 i{
 	font-weight:300;
@@ -920,6 +962,7 @@ a.callbacks_nav.callbacks3_nav.next{
 
 
 @media screen and (max-width: 62.75em) {
+  .about-agileits .passionq p{margin-top:0;font-size:20px;}
   .about-agileits p:nth-child(1){
     margin-bottom:0;
   }
@@ -2839,6 +2882,7 @@ a.w3_agile_vimeo:hover{
 		width: 33.33%;
 		padding:0 .5em;
 	}
+  .sm3{width:25%;}
 	.w3_agile_portfolio_grid1{
 		margin-top:1em;
 	}
